--- a/OnlineShoppingPlatform/ShoppingWeb/src/app/cart/cart.component.html
+++ b/OnlineShoppingPlatform/ShoppingWeb/src/app/cart/cart.component.html
@@ -14,10 +14,10 @@
             </thead>
             <tbody>
                 <tr *ngFor="let item of cart?.items">
-                    <td>{{ item.product.name }}</td>
+                    <td>{{ item.product?.name }}</td>
                     <td>{{ item.quantity }}</td>
-                    <td>${{ item.product.price }}</td>
-                    <td>${{ item.quantity * item.product.price }}</td>
+                    <td>${{ item.product?.price }}</td>
+                    <!-- <td>${{ item.quantity * item.product?.price }}</td> -->
                     <td>
                         <button class="btn btn-sm btn-outline-danger" (click)="removeItem(item.cartItemId)">
                             Remove
