Improving of cart related functionalities

--- a/OnlineShoppingPlatform/ShoppingWeb/src/app/cart/cart.component.html
+++ b/OnlineShoppingPlatform/ShoppingWeb/src/app/cart/cart.component.html
@@ -8,7 +8,7 @@
                     <th>Product</th>
                     <th>Quantity</th>
                     <th>Price</th>
-                    <th>Subtotal</th>
+                    <th>Total</th>
                     <th></th>
                 </tr>
             </thead>
