--- a/OnlineShoppingPlatform/ShoppingWeb/src/app/products/product-list.component.html
+++ b/OnlineShoppingPlatform/ShoppingWeb/src/app/products/product-list.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-  <h2 class="mb-4 text-center">🛍️ Product Catalog helouus</h2>
+  <h2 class="mb-4 text-center">🛍️ Product Catalog </h2>
 
   <div *ngIf="products && products.length > 0; else noProducts">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
