--- a/OnlineShoppingPlatform/ShoppingWeb/src/app/cart/cart.component.html
+++ b/OnlineShoppingPlatform/ShoppingWeb/src/app/cart/cart.component.html
@@ -8,16 +8,14 @@
                     <th>Product</th>
                     <th>Quantity</th>
                     <th>Price</th>
-                    <th>Total</th>
                     <th></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let item of cart?.items">
-                    <td>{{ item.product?.name }}</td>
+                    <td>{{ item.productName }}</td>
                     <td>{{ item.quantity }}</td>
-                    <td>${{ item.product?.price }}</td>
-                    <!-- <td>${{ item.quantity * item.product?.price }}</td> -->
+                    <td>${{ item.price }}</td>
                     <td>
                         <button class="btn btn-sm btn-outline-danger" (click)="removeItem(item.cartItemId)">
                             Remove
