--- a/OnlineShoppingPlatform/ShoppingWeb/src/app/navbar/navbar.component.html
+++ b/OnlineShoppingPlatform/ShoppingWeb/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/products">
         <strong>E-marketplace</strong>
     </a>
     <div class="flex-grow-1"></div>
